# ECEN404-2026SP-Luggage-Carrier-and-Tracker-1

App subsystem/: App.js  app.json  firestore.rules
Control&Autonomy/main/: CMakeLists.txt  Kconfig.projbuild  MotorDriver.cpp  MotorDriver.h  PID.cpp  PID.h  alarm_test_task.cpp  alarm_test_task.h  app_main.cpp  buzzer.cpp  buzzer.h  comms.c  comms.h  control_task.cpp  control_task.h  controllers.cpp  controllers.h  encoder.cpp  encoder.h  events.h  hx711.cpp  hx711.h  lidar_preprocess.cpp  lidar_preprocess.h  localization.cpp  localization.h  manual_test.cpp  manual_test.h  oa_module.cpp  oa_module.h  oa_task.cpp  oa_task.h  odometry.cpp  odometry.h  outer_controller.cpp  rplidar.c  rplidar.h  shared_state.c  shared_state.h  state.h  (+8 more)
Presentations and Excel sheets/404 Presentations and Excel/: 404 Timeline and execution.xlsx  404 validation plan.xlsx  Aiden Shepard Demo.pptx  Rover BOM.xlsx
